apps/python-sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-sample-app
  namespace: python-sample-app
  
spec:
  selector:
    app: python-sample-app
  ports:
  - port: 80
    targetPort: 5000
