apps/python-sample-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-sample-app
  labels:
    name: python-sample-app
  namespace: python-sample-app
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - psa.k8s.integratn.tech
    secretName: python-sample-app-tls
  rules:
  - host: psa.k8s.integratn.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: python-sample-app
            port: 
              number: 80
